--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,27 @@
-h1{
-    border: solid red 1px;
+/* aplicando em todos os elementos */
+*{
+    margin: 0;
+    padding: 0;
 }
+
+/* elementos do corpo */
+fieldset{
+    border: 0;
+}
+body{
+    background-color: rgb(238, 255, 255);
+    font-family: sans-serif;
+    font-size: 1em;
+    color: blue;
+    margin-left: 36%;
+    margin-top: 2%;
+    justify-content: center;
+}
+.input, select, button{
+    background-color: white;
+    font-family: sans-serif;
+    font-size: 1em;
+    color: blue;
+    border-radius: 5px;   
+}
+.campo
