--- a/estilo.css
+++ b/estilo.css
@@ -3,6 +3,13 @@
     margin: 0;
     padding: 0;
 }
+/* estilos para id=titulo */
+.titulo{
+    font-family: sans-serif;
+    justify-content: center;
+    color: black;
+    padding-bottom: 10px;
+}
 
 /* elementos do corpo */
 fieldset{
@@ -12,16 +19,54 @@ body{
     background-color: rgb(238, 255, 255);
     font-family: sans-serif;
     font-size: 1em;
-    color: blue;
+    color: black;
     margin-left: 36%;
     margin-top: 2%;
     justify-content: center;
 }
-.input, select, button{
+input, select, button{
     background-color: white;
     font-family: sans-serif;
     font-size: 1em;
-    color: blue;
+    color: black;
     border-radius: 5px;   
 }
-.campo
+.campo{
+    margin-bottom: 0.5em;
+}
+.campo label{
+    margin-bottom: 0.2em;
+    color: black;
+    display: block;
+}
+.grupo:before, .grupo:after{
+    display: table;
+}
+
+fieldset.grupo .campo{
+    float: left;
+    margin-right: 1em;
+}
+.campo input:focus, .campo select:focus{
+    background-color: rgb(232, 232, 232);
+}
+.botao{
+    font-size: 1.2em;
+    background-color: black;
+    margin-bottom: 1em;
+    color: white;
+    padding: 0.2em 0.6em;
+    box-shadow: 2px 2px;
+    box-shadow: 3px 3px 5px gray;
+    cursor: pointer;
+}
+.botao:hover{
+    background-color: blue;
+    text-shadow: none;
+}
+.campo input[type="text"], .campo input[type="email"], .campo select, .campo input[type="password"]{
+    padding: 0.5em;
+    border: 1px solid black;
+    box-shadow: 3px 3px 5px gray;
+    
+}
